import "galaxy.proto";

package baidu.galaxy;

option cc_generic_services = true;

message LaunchPodRequest {
    optional string podid = 1;
    optional PodDescriptor pod = 2;
}

message LaunchPodResponse {
    optional Status status = 1;
}

message TerminatePodRequest {
    optional string podid = 1;
}

message TerminatePodResponse {
    optional Status status = 1;
}

message QueryPodsRequest {
}

message QueryPodsResponse {
    repeated PodStatus pods = 1;
}

service Gced {
    rpc LaunchPod(LaunchPodRequest) returns (LaunchPodResponse);
    rpc TerminatePod(TerminatePodRequest) returns (TerminatePodResponse);
    rpc QueryPods(QueryPodsRequest) returns (QueryPodsResponse);
}
